syntax = "proto3";
package trustypb;

import "gogoproto/gogo.proto";
// for grpc-gateway
import "google/api/annotations.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

service Status {
    // Version returns the server version.
    rpc Version(EmptyRequest) returns (VersionResponse) {
        option (google.api.http) = {
            get: "/v1/status/version"
        };
    }

    // Server returns the server status.
    rpc Server(EmptyRequest) returns (ServerStatusResponse) {
        option (google.api.http) = {
            get: "/v1/status/server"
      };
    }

    // Caller returns the caller status.
    rpc Caller(EmptyRequest) returns (CallerStatusResponse) {
        option (google.api.http) = {
            get: "/v1/status/caller"
      };
    }
}

message EmptyRequest {
}

message VersionResponse {
    // Version is the server version.
    string Version = 1;
}

message ServerStatus {
    // Name of the server or application.
    string Name = 1;
    // Nodename is the human-readable name of the cluster member,
    // or empty for single host.
    string Nodename = 2;
    // Hostname is operating system's host name.
    string Hostname = 3;
    // ListenURLs is the list of URLs the service is listening on.
    repeated string ListenURLs = 4;
    // StartedAt is the Unix time when the server has started.
    int64 StartedAt = 5;
    // Version is the server version.
    string Version = 6;
}

message ServerStatusResponse {
    // Status of the server.
    ServerStatus Status = 1;
}

message CallerStatusResponse {
    // Role of the caller.
    string Role = 1;
}

// Error is the generic error returned from unary RPCs.
message Error {
	string error = 1;
	int32 code = 2;
	string message = 3;
}
